--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Hello React</title>
-  </head>
-  <body>
-    <div id="hello"></div>
-    <div id="world"></div>
-	<script src="bundle.js"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8">
+        <link href="styles.css" rel="stylesheet">
+        <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+        <script src="node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <title>Hello React</title>
+    </head>
+    <body>
+        <div id="header"></div>
+        <div id="tweet"></div>
+        <script src="bundle.js"></script>
+    </body>
 </html>
